第三次提交

--- a/views/login.html
+++ b/views/login.html
@@ -124,7 +124,7 @@
 			<form action="/login" method="POST">
 				<ul>
 					<li>
-						<span>用户账]]]号：</span>
+						<span>用户账号：</span>
 						<input type="text" name="user_name" required  placeholder="请输入账号"/>
 					</li>
 					<li>
