第三次提交

--- a/views/reg.html
+++ b/views/reg.html
@@ -111,7 +111,7 @@
                             <i class="iconfont font-yanjingbi" style="font-size: 24px;"></i></div>
                     </div>
                     <div class="row-input input-component" style="position: relative;">
-                        <input type="password" name="password" placeholder="6-18位数字字母组合密码" draggable="false"
+                        <input type="password" name="pwd" placeholder="6-18位数字字母组合密码" draggable="false"
                                autocomplete="off" style="height: 44px; width: 340px;">
                         <!-- react-text: 64 -->
                         <!-- /react-text -->
