--- a/views/login.html
+++ b/views/login.html
@@ -121,20 +121,20 @@
 
 		<div class="login">
 			<h2>电子认证登录</h2>
-			<form action="/login" method="POST">
+			<form action="/login" method="post">
 				<ul>
 					<li>
 						<span>用户账号：</span>
-						<input type="text" name="user_name" required  placeholder="请输入账号"/>
+						<input type="text" name="phone" required  placeholder="请输入账号"/>
 					</li>
 					<li>
 						<span>用户密码：</span>
-						<input type="password" name="user_pwd" required  placeholder="请输入密码"/>
+						<input type="password" name="pwd" required  placeholder="请输入密码"/>
 					</li>
-					<li>
-						<span>输入验证码：</span>
-						<input type="text" name="user_code" required placeholder="请扫码获取验证码">
-					</li>
+{{/*					<li>*/}}
+{{/*						<span>输入验证码：</span>*/}}
+{{/*						<input type="text" name="user_code" required placeholder="请扫码获取验证码">*/}}
+{{/*					</li>*/}}
 					<li>
 						<input type="submit" name="login" value="登录" />
 						<input type="reset" name="reset" value="重置" />
