--- a/views/uploadRecord.html
+++ b/views/uploadRecord.html
@@ -121,7 +121,7 @@
             </div>
             <div class="float-bar">
                 <div class="float-item"><span class="iconfont font-phone"></span>
-                    <div class="detail detail-phone sanjiao"><span>18157144191</span></div>
+                    <div class="detail detail-phone sanjiao"><span>17679242717</span></div>
                 </div>
                 <div class="float-item"><span class="iconfont font-wechat"></span>
                     <div class="detail detail-we-chat sanjiao"><img
@@ -418,7 +418,7 @@
                                                                                 class="att-file-type"></span></p></div>
                                                             </td>
                                                             <td class="el-table_6_column_37">
-                                                                <div class="cell"><span>{{.FileSize}}</span></div>
+                                                                <div class="cell"><span>{{.FileSize}}KB</span></div>
                                                             </td>
                                                             <td class="el-table_6_column_38">
                                                                 <div class="cell"><span
