--- a/views/uploadRecord.html
+++ b/views/uploadRecord.html
@@ -450,7 +450,7 @@
                                                                                 href="http://www.baoquan.com/monitor/certificate/add?attId=81D5D8117C50443A9B7AC11471350720&amp;lang=zh">开启监测</a>
                                                                         <a
                                                                                 target="_blank"
-                                                                                href="/cert_detail.html?cert_id={{.FileCert}}"
+                                                                                href="querydata.html"
                                                                                 class="operate-blue"
                                                                                 style="color: rgb(84, 136, 249); margin: 0px 10px;"><span>查看证书</span></a>
                                                                     </div>
