--- a/views/login.html
+++ b/views/login.html
@@ -131,14 +131,17 @@
 						<span>用户密码：</span>
 						<input type="password" name="pwd" required  placeholder="请输入密码"/>
 					</li>
-{{/*					<li>*/}}
-{{/*						<span>输入验证码：</span>*/}}
-{{/*						<input type="text" name="user_code" required placeholder="请扫码获取验证码">*/}}
-{{/*					</li>*/}}
+					<li>
+						<span>输入验证码：</span>
+						<input type="text" name="user_code" required placeholder="请扫码获取验证码">
+					</li>
 					<li>
 						<input type="submit" name="login" value="登录" />
 						<input type="reset" name="reset" value="重置" />
 						<a href="reg.html">注册新用户</a>
+					</li>
+					<li>
+						<span><a href="login_sms.html">验证码登录</a></span>
 					</li>
 				</ul>
 				<img src="static/img/qrcode.png" width="100px" height="100px" style="padding-left: 200px;padding-top: 30px"/>
